--- a/source/_web-template/web-template.html
+++ b/source/_web-template/web-template.html
@@ -427,7 +427,7 @@
 
 <div class="book">
 
-<div class="tutorial">
+<div class="tutorial no-bleeding-to-next-page">
   <h2>How to Read</h2>
   <p><i>On a phone:</i><br/>Swipe, or tap the edges of the page</p>
   <p><i>On a laptop:</i><br/>Use the arrow keys, the space bar, or the touch pad</p>
@@ -435,7 +435,7 @@
   <p>Basically, <small>everything works</small></p>
 </div>
 
-<img class="cover" src="{{ cover_image }}" alt="" />
+<img class="cover no-bleeding-to-next-page" src="{{ cover_image }}" alt="" />
 {{ title_html }}
 {{ web_book_body_html }}
 <p class="last-page"></p>
